// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dependsOn > should run dependent tasks first 1`] = `
"Setup node...
Installing npm...
Compiling ts..."
`;

exports[`dependsOn > should run shared dependent tasks 1`] = `
"Setup node...
Installing npm...
Compiling svg...
Compiling ts...
Compiling...
Running tests..."
`;

exports[`dependsOn > should run shared dependent tasks 2 1`] = `
"Setup node...
Installing npm...
Running tests...
Compiling svg...
Compiling ts...
Compiling..."
`;
